--- a/styles/base/_css-variables.scss
+++ b/styles/base/_css-variables.scss
@@ -81,6 +81,7 @@
 
   // Z-index
   --z-index-dropdown: #{vars.$z-index-dropdown};
+  --z-index-sidebar: #{vars.$z-index-sidebar};
   --z-index-sticky: #{vars.$z-index-sticky};
   --z-index-fixed: #{vars.$z-index-fixed};
   --z-index-modal: #{vars.$z-index-modal};
