--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -104,6 +104,11 @@ $breakpoint-lg:  1024px !default;
 $breakpoint-xl:  1280px !default;
 $breakpoint-2xl: 1536px !default;
 
+// Breakpoints específicos (opcional)
+$breakpoint-mobile: 767px !default;    // Hasta 767px
+$breakpoint-tablet: 768px !default;    // 768px a 1023px  
+$breakpoint-desktop: 1024px !default;  // 1024px en adelante
+
 // Contenedores
 $container-xs:  100% !default;
 $container-sm:  640px !default;
